<resources>
    <string name="next">Next</string>
    <string name="ai_powered_dental_care">Sweet Taste of AI in Oral Hygiene</string>
    <string name="whitening_title">Whitening</string>
    <string name="oral_hygiene">Oral Hygiene</string>
    <string name="select_your_checkup">Select your Checkup</string>
    <string name="regular_checkup">Regular Checkup</string>
    <string name="go_in_front_of_a_mirror">Go in front of a mirror.</string>
    <string name="use_your_cellphone_s_main_camera">Use your cellphone’s main camera.</string>
    <string name="the_pattern_should_be_matched_with_your_teeth">The pattern should be matched\nwith your teeth.</string>
    <string name="back">Back</string>
    <string name="toothache_amp_tooth_sensitivity"><![CDATA[Toothache & Tooth sensitivity]]></string>
    <string name="toothache_amp_tooth_sensitivity_checkup"><![CDATA[Toothache & Tooth sensitivity checkup]]></string>
    <string name="check_up">Check Up</string>
    <string name="checkup_desciption_one">Examination of\nyour teeth,\ngums, and mouth</string>
    <string name="checkup_description_two">The process of\nlightening\nthe color of teeth</string>
    <string name="checkup_description_three">Caused by problems\nsuch as cavities,\nabscessed teeth,\ntooth traumas, etc.</string>
    <string name="checkup_description_foure">Such as dental restoration\noverhang, improper root\ncanal treatment, restoration\n discoloration, etc.</string>
    <string name="checkup_description_five">such as gum bleeding,\nbad breath, oral lesions, etc.</string>
    <string name="upper_jaw">Upper jaw</string>
    <string name="lower_jaw">Lower jaw</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_">Cancel</string>
    <string name="please_select_a_tooth_that_hurts">Please select a tooth that hurts</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="month">Month</string>
    <string name="once_and_then_dissipated">Once and then dissipated</string>
    <string name="_1_how_long_has_it_been_hurting">1- How long has it been hurting?</string>
    <string name="days_">Days:</string>
    <string name="intermittent_mild">Intermittent, mild</string>
    <string name="if_severe_worsening">If severe, worsening</string>
    <string name="biting_pain">Biting pain</string>
    <string name="cold_less_than_30_linger_after_cold_gone">Cold, less than 30\'\' linger after cold gone</string>
    <string name="hot_cold_more_than_30_linger_after_stimulus_gone">Hot/cold, more than 30\'\' linger after stimulus gone</string>
    <string name="biting_pain_">Biting pain:</string>
    <string name="only_sometimes_or_a_sharp_electric_pain">Only sometimes or a sharp, electric pain.</string>
    <string name="with_every_bite">With every bite</string>
    <string name="sharp_or_electric">Sharp or electric</string>
    <string name="dull_aching">Dull, aching</string>
    <string name="throbbing">Throbbing</string>
    <string name="constant">Constant</string>
    <string name="wake_me_up_at_night">wake me up at night</string>
    <string name="upper">Upper</string>
    <string name="lower">Lower</string>
    <string name="check_question_title_two">2- Does anything bring on the pain?</string>
    <string name="checkup_question_title_three">3- Describe the pain</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="i_m_done">I\'m done</string>
    <string name="let_s_do_the_checkup">Let’s do the checkup</string>
    <string name="any_other_teeth_hurt">Any other teeth hurt?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="torch">Torch</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photos">Choose Photos</string>
    <string name="problems_with_previous_treatment">Problems with Previous Treatment</string>
    <string name="problems_with_previous_treatment_checkup">Problems with Previous Treatments checkup</string>
    <string name="others">Others</string>
    <string name="others_checkup">Others</string>
    <string name="your_regular_checkup_result">Your %s result:</string>
    <string name="oral_hygiene_details_score">Oral hygiene score</string>
    <string name="your_oral_hygiene_is_very_good_but_better_brushing_everyday">Your Oral Hygiene is very good But, better brushing everyday.</string>
    <string name="share">Share</string>
    <string name="share_with_your_friends_or_dentist_to_let_them_know_your_result">Share with your friends or dentist to let them know your result.</string>
    <string name="more_details">More Details</string>
    <string name="in_this_checkup">In this checkup,</string>
    <string name="problem_were_found_in_your_teeth"> problems\nwere found in your teeth.</string>
    <string name="front_teeth">Front Teeth</string>
    <string name="tooth_sensitivity">Tooth Sensitivity</string>
    <string name="tooth_problem_count">%d</string>
    <string name="show_real_image">Show Real Image</string>
    <string name="whitening_check_up">Whitening Check up</string>
    <string name="your_whitening_checkup_result">Your Whitening Checkup result:</string>
    <string name="done">Done</string>
    <string name="whitening_checkup">Whitening Checkup</string>
    <string name="score_description_a_plus">Outstanding work!! Way to go %s. Keep going this way of caring for your teeth</string>
    <string name="score_description_a">Great job!! Go on the amazing work. Don\'t forget to floss. You are not far from having the perfect teeth.</string>
    <string name="score_description_a_mines">You\'re doing well!! Keep up the great work and brush twice a day. Your teeth are going to sparkle and stay healthy!</string>
    <string name="score_description_b_plus">Nice work! Don\'t forget to floss and make sure you brush before bed to have a bright smile.</string>
    <string name="score_description_b">Good job %s! To have sparkle teeth, you should take better care of your teeth by brushing them twice a day</string>
    <string name="score_description_c_plus">You can do better %s!! Brush your teeth twice a day, and don\'t rinse with water straight after it to help keep your teeth and mouth healthy.</string>
    <string name="score_description_c">Let\'s try a little harder. You can do it! Brush twice a day and floss daily. Try to avoid sweet drinks and food, or rinse after eating sweets.</string>
    <string name="score_description_c_mines">You should pay more attention to your dental care routine! Make sure you thoroughly clean your teeth at least twice a day and flossing before it!</string>
    <string name="score_description_d_plus">We really want you to have a healthy and bright smile. Let\'s work harder and brush at least twice a day and try to make sure you brush every surface of all your teeth.</string>
    <string name="score_description_d">You\'d better look after your teeth more carefully. Don\'t forget to floss and limit sugar intake! You can get back on track!</string>
    <string name="score_description_d_mines">Oh no! Let\'s help you get back on track %s. Make brushing your teeth a habit. Remember, regular flossing may also reduce dental problems.</string>
    <string name="tooth_sensitivity_problem_description">Is a sign of acid erosion and normally occurs in patient with meticulous oral hygiene.</string>
    <string name="cracked_cusp_tooth_problem_description">If a crack runs from the top of the tooth to the gum or below. This is a serious issue. </string>
    <string name="reversible_pulpitis_problem_description">Referes to instances where the inflammation is mild and the tooth pulp remains healthy enough to save.</string>
    <string name="ireversible_pulpitis_problem_description">Occurs when inflammations and other symptoms, such as pain, are severe, and the pulp can not be saved.</string>
    <string name="necrotic_nonvital_problem_description">When the pulp is nucretic, you have irreversible pultips. In this case, you may need a root canal or a tooth extraction.</string>
    <string name="tmd_problem_description">Are disorders that evelop from problems with the fit between upper and lower teeth and the jaw joint.</string>
    <string name="white_spot_problem_description">It has several possible reasons including dental fluorosis, enamel hypoplasia, poor dental hygiene, and eating too many acidic or sugary foods.</string>
    <string name="amalgam_filling_problem_description">Amalgam filling is a silver-like dental filling material used to fill cavities caused by tooth decay .</string>
    <string name="calcules_problem_description">It is a crusty deposit that can trap stains on the teeth and cause discoloration.It creates a strong bond that can only be removed by a dental professional.</string>
    <string name="carries_problem_description">dental caries , also known as tooth decay , is the breakdown of teeth due to acids made by bacteria .</string>
    <string name="sinus_inflection_problem_description">Occurs when your nasal cavities become infected, swollen, and inflamed. It is mostly caused by viruses.</string>
    <string name="dental_impant_problem_description">is a prosthesis that interfaces with the bone of the jaw or skull to support a dental prosthesis such as a crown, bridge, denture, or facial prosthesis .</string>
    <string name="bone_loss_problem_description">The most common cause of bone loss is tooth extraction and  serious gum infection. Bone loss can cause teeth to loosen or lead to tooth loss.</string>
    <string name="amalgam_restoration_overhang_problem_description">The overhang is largely iatrogenic, caused by poor operator skill exacerbated by unusual dental morphology.</string>
    <string name="infectious_apical_lesion_problem_description">Radiolucent lesions that appear in the bone surrounding portals of exit from infected root canal systems</string>
    <string name="remained_dental_root_problem_description">A residual root is a tooth root which was left over in the jaw after a past extraction or is caused by extensive caries. These sometimes can give problems such as pain and infection.</string>
    <string name="malposed_wisdom_tooth_problem_description">They may grow sideways, partially emerge from the gum, or even remain trapped beneath the gum and bone. they can cause many problems.</string>
    <string name="tooth_with_missing_counterpart_problem_description">when you don\'t replace a missing tooth,the opposing tooth over erupts into the space and ruins the bite and chewing ability</string>
    <string name="show_illustration">Show Illustration</string>
    <string name="re_take_the_photo_you_must_keep_it_still_for_a_second_after_the_vibration">Re-take the photo. You must keep it still for a second after the vibration.</string>
    <string name="history_checkup">History Checkup</string>
    <string name="this_image_have_a_low_qulity_please_retake_again">The taken photo is blurry. Please take another image which should be clear.</string>
    <string name="the_selected_picture_is_incorrect">This picture is not correct. you should upload a picture from %S.</string>
    <string name="retake_the_photo">Re-take the photo. You must keep it still for a second after the vibration.</string>
    <string name="month_day">%s %s</string>
    <string name="loading_history">Loading History…</string>
    <string name="teeth_whitening">Teeth Whitening</string>
    <string name="checkup_second_tip">The distance between your mouth and\nyour camera should be about the size\nof a palm.</string>
    <string name="checkup_help_five_tip">When the app detects your teeth, it\nvibrates, then you should keep your\ncellphone for a second.</string>
    <string name="x_rays">X-rays</string>
    <string name="x_ray_description">It is a picture of teeth/bone\nthat aids in the diagnosis of\nany abnormalities\nin the mouth.</string>
</resources>